# umsl-cmp-sci-4500-project-snapshot-2019-05-07

./: CMakeLists.txt
src/: console.c  console.h  log.h  main.c  service.c  service.h
